fix(localization): fix missing string in template (#835)
* fix(localization): fix missing string in template

* chore: temp place locale

--- a/web/index.templ
+++ b/web/index.templ
@@ -70,7 +70,7 @@ templ base(title string, body templ.Component, impressum *config.Impressum, chal
 				<footer>
 					<div class="centered-div">
 						<p>
-							{ localizer.T("protected_by") } <a href="https://github.com/TecharoHQ/anubis">Anubis</a> from <a
+							{ localizer.T("protected_by") } <a href="https://github.com/TecharoHQ/anubis">Anubis</a> { localizer.T("protected_from") } <a
 	href="https://techaro.lol"
 >Techaro</a>. { localizer.T("made_with") }.
 						</p>
