feat(web): Add option for customizable explanation text (#747)
* Add option for customizable explanation text

* Add changes to CHANGELOG.md

* Replace custom explanation text in favor of static simplified text

Also includes translations for the simple_explanation using Google
Translate as a placeholder so tests pass.

---------

Signed-off-by: Xe Iaso <xe.iaso@techaro.lol>
Co-authored-by: Xe Iaso <xe.iaso@techaro.lol>

--- a/lib/challenge/proofofwork/proofofwork.templ
+++ b/lib/challenge/proofofwork/proofofwork.templ
@@ -15,19 +15,24 @@ templ page(localizer *localization.SimpleLocalizer) {
 			<div class="bar-inner"></div>
 		</div>
 		<details>
-			<summary>{ localizer.T("why_am_i_seeing") }</summary>
-			<p>
-				{ localizer.T("ai_companies_explanation") }
-			</p>
-			<p>
-				{ localizer.T("anubis_compromise") }
-			</p>
-			<p>
-				{ localizer.T("hack_purpose") }
-			</p>
-			<p>
-				{ localizer.T("jshelter_note") }
-			</p>
+			if anubis.UseSimplifiedExplanation {
+				<p>
+					{ localizer.T("simplified_explanation") }
+				</p>
+			} else {
+				<p>
+					{ localizer.T("ai_companies_explanation") }
+				</p>
+				<p>
+					{ localizer.T("anubis_compromise") }
+				</p>
+				<p>
+					{ localizer.T("hack_purpose") }
+				</p>
+				<p>
+					{ localizer.T("jshelter_note") }
+				</p>
+			}
 		</details>
 		<noscript>
 			<p>
